--- a/pyqt/pyQtdesigner./mainwindow.ui
+++ b/pyqt/pyQtdesigner./mainwindow.ui
@@ -141,8 +141,15 @@
     <addaction name="actionAbout"/>
     <addaction name="actionAboutQt"/>
    </widget>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Вид</string>
+    </property>
+    <addaction name="action"/>
+   </widget>
    <addaction name="FileMenu"/>
    <addaction name="menu_2"/>
+   <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="openAction">
@@ -175,6 +182,11 @@
   <action name="actionAboutQt">
    <property name="text">
     <string>O Qt</string>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>Панель закладок</string>
    </property>
   </action>
  </widget>
