--- a/pyqt/new/gui/ui/notes_widget.ui
+++ b/pyqt/new/gui/ui/notes_widget.ui
@@ -58,7 +58,14 @@
     </layout>
    </item>
    <item>
-    <widget class="QTableView" name="notesView"/>
+    <widget class="QTableView" name="notesView">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
