--- a/pyqt/pyQtdesigner./mainwindow.ui
+++ b/pyqt/pyQtdesigner./mainwindow.ui
@@ -33,17 +33,20 @@
     <item>
      <widget class="QWidget" name="navigation" native="true">
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0">
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <property name="leftMargin">
-        <number>6</number>
+        <number>0</number>
        </property>
        <property name="topMargin">
-        <number>6</number>
+        <number>0</number>
        </property>
        <property name="rightMargin">
-        <number>6</number>
+        <number>0</number>
        </property>
        <property name="bottomMargin">
-        <number>6</number>
+        <number>0</number>
        </property>
        <item>
         <widget class="QToolButton" name="backBtn">
@@ -145,13 +148,40 @@
     <property name="title">
      <string>Вид</string>
     </property>
-    <addaction name="action"/>
+    <addaction name="actionBook"/>
    </widget>
    <addaction name="FileMenu"/>
    <addaction name="menu_2"/>
    <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QDockWidget" name="bookWidget">
+   <property name="mouseTracking">
+    <bool>true</bool>
+   </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::DefaultContextMenu</enum>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+   <property name="toolTip">
+    <string/>
+   </property>
+   <property name="statusTip">
+    <string/>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QTextBrowser" name="textBrowser"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="openAction">
    <property name="checkable">
     <bool>false</bool>
@@ -184,7 +214,13 @@
     <string>O Qt</string>
    </property>
   </action>
-  <action name="action">
+  <action name="actionBook">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Панель закладок</string>
    </property>
