--- a/Kursovaja/KMainWindow.ui
+++ b/Kursovaja/KMainWindow.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>724</width>
-    <height>752</height>
+    <width>711</width>
+    <height>698</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Сапер</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centr"/>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>724</width>
+     <width>711</width>
      <height>21</height>
     </rect>
    </property>
