--- a/Jango/Jango-project/itmo/lessonapp/templates/lessonapp/base-template.html
+++ b/Jango/Jango-project/itmo/lessonapp/templates/lessonapp/base-template.html
@@ -1,5 +1,62 @@
-<h1>My first Django application!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!--<link rel="shortcut icon" href="../../assets/ico/favicon.ico">-->
 
-{% block content %}{% endblock %}
+    <title>Itmo</title>
+    {% load staticfiles %}
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'lessonapp/bootstrap.min.css' %}" rel="stylesheet">
 
-{% block page %}{% endblock %}
+    <!-- Custom styles for this template -->
+    <link href="{% static 'lessonapp/starter-template.css' %}" rel="stylesheet">
+
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'lessonapp:index' %}">Itmo</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="{% url 'lessonapp:index' %}">Home</a></li>
+            <li><a href="{% url 'lessonapp:students' %}">Students</a></li>
+            <li><a href="{% url 'lessonapp:lessons' %}">Lessons</a></li>
+            <li><a href="{% url 'lessonapp:attendance' %}">Attendance</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container">
+
+      {% block content %}{% endblock %}
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="{% static 'lessonapp'bootstrap.min.js' %{"></script>
+  </body>
+</html>
