--- a/Jango/Jango-project/itmo/lessonapp/templates/lessonapp/attendance-form.html
+++ b/Jango/Jango-project/itmo/lessonapp/templates/lessonapp/attendance-form.html
@@ -2,7 +2,7 @@
 {% block content %}
 <form action="" method="POST">
     {% csrf_token %}
-    {{form}}
+    {{form.as_p}}
     <input type="submit" value="Save">
 </form>
 {% endblock %}
