--- a/Kursovaja/Loose.ui
+++ b/Kursovaja/Loose.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>459</width>
     <height>297</height>
    </rect>
   </property>
@@ -22,6 +22,7 @@
         <property name="font">
          <font>
           <family>MS Shell Dlg 2</family>
+          <pointsize>10</pointsize>
           <weight>75</weight>
           <bold>true</bold>
          </font>
